[gd_scene load_steps=6 format=2]

[ext_resource path="res://StartMazeSequenceTrigger.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Music/26 - Right Behind You.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sounds/Music/20 - The Art of War.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Music/17 - Haunted Fortress.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 347.5, 10 )

[node name="StartMazeSequenceTrigger" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 337.5, 0 )
shape = SubResource( 1 )

[node name="ScreamFortressTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.784

[node name="RightBehindYouTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.838

[node name="ArtOfWarTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_StartMazeSequenceTrigger_body_entered"]
[connection signal="finished" from="ScreamFortressTheme" to="." method="_on_ScreamFortressTheme_finished"]
[connection signal="finished" from="RightBehindYouTheme" to="." method="_on_RightBehindYouTheme_finished"]
